--- a/docs/rapport/include/header.html
+++ b/docs/rapport/include/header.html
@@ -21,7 +21,7 @@
 </style>
 
 <div class="header" id="myHeader">
-    <h2 class="alignleft">Projet de base de données</h2>
+    <!--<h2 class="alignleft">Projet de base de données</h2>-->
     <img class="alignright" src="img/INSA_logo.png" style="height:65px">
     <div style="clear: both;"></div>
 </div>
